--- a/package.json
+++ b/package.json
@@ -5,8 +5,16 @@
   "main": "build/index.html",
   "typings": "./build/index",
   "dependencies": {
+    "apollo-cache-inmemory": "1.2.4",
+    "apollo-client": "2.3.4",
+    "apollo-link": "1.2.2",
+    "apollo-link-http": "1.5.4",
+    "apollo-link-state": "0.4.1",
+    "graphql-tag": "2.9.2",
     "gx": "1.0.0-rc4",
     "react": "16.4.1",
+    "react-apollo": "2.1.5",
+    "react-dom": "16.4.1",
     "react-helmet": "5.2.0",
     "react-router-dom": "4.3.1"
   },
@@ -20,21 +28,25 @@
     "@types/react-helmet": "5.0.6",
     "@types/react-router-dom": "4.2.7",
     "babel-loader": "8.0.0-beta.3",
+    "chokidar": "2.0.3",
+    "chokidar-cli": "1.2.0",
     "commitizen": "2.10.1",
     "copy-webpack-plugin": "4.5.1",
     "css-loader": "0.28.11",
     "cz-emoji": "1.1.1",
     "dotenv-webpack": "1.5.7",
+    "file-loader": "1.1.11",
     "html-webpack-plugin": "3.2.0",
     "node-sass": "4.9.0",
     "nps": "5.9.0",
     "nps-utils": "1.5.0",
-    "react-dom": "16.4.1",
     "sass-loader": "7.0.3",
     "standard-version": "4.4.0",
     "style-loader": "0.21.0",
     "ts-loader": "4.4.1",
     "ts-node": "6.0.5",
+    "tslint": "5.10.0",
+    "tslint-react": "3.6.0",
     "typescript": "2.9.1",
     "webpack": "4.12.0",
     "webpack-cli": "3.0.7",
