--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "exclude": [
     "**/*.spec.ts",
     "build",
-    "webpack",
     "scripts",
+    "webpack",
     ".vscode",
     ".reference",
   ],
@@ -21,19 +21,13 @@
     // "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
     "baseUrl": ".",                           /* Base directory to resolve non-absolute module names. */
-    "paths": {
+    "paths": {                                /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
       "*": [
-        "./node_modules/*",
-        "./src/types/*"
+        "*",
+        "./types/*",
+        "../node_modules/*"
       ]
     },
-    // "paths": {                             /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
-    //   "*": [
-    //     "*",
-    //     "./types/*",
-    //     "../node_modules/*"
-    //   ]
-    // },
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     // "types": [],                           /* Type declaration files to be included in compilation. */
