:sparkles: ($user) Example Apollo Cached NetStat

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "apollo-cache-inmemory": "1.2.4",
     "apollo-client": "2.3.4",
     "apollo-link": "1.2.2",
+    "apollo-link-error": "1.1.0",
     "apollo-link-http": "1.5.4",
     "apollo-link-state": "0.4.1",
+    "graphql": "0.13.2",
     "graphql-tag": "2.9.2",
     "gx": "1.0.0-rc4",
     "react": "16.4.1",
