--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@babel/core": "7.0.0-beta.51",
     "@babel/preset-env": "7.0.0-beta.51",
     "@babel/preset-react": "7.0.0-beta.51",
+    "@types/enzyme": "3.1.11",
+    "@types/jest": "23.1.1",
     "@types/react": "16.3.17",
     "@types/react-dom": "16.0.6",
     "@types/react-helmet": "5.0.6",
@@ -37,14 +39,19 @@
     "css-loader": "0.28.11",
     "cz-emoji": "1.1.1",
     "dotenv-webpack": "1.5.7",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
     "file-loader": "1.1.11",
     "html-webpack-plugin": "3.2.0",
+    "jest": "23.1.0",
     "node-sass": "4.9.0",
     "nps": "5.9.0",
     "nps-utils": "1.5.0",
+    "react-testing-library": "4.0.2",
     "sass-loader": "7.0.3",
     "standard-version": "4.4.0",
     "style-loader": "0.21.0",
+    "ts-jest": "22.4.6",
     "ts-loader": "4.4.1",
     "ts-node": "6.0.5",
     "tslint": "5.10.0",
