--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "enzyme-adapter-react-16": "1.1.1",
     "file-loader": "1.1.11",
     "html-webpack-plugin": "3.2.0",
+    "identity-obj-proxy": "3.0.0",
     "jest": "23.1.0",
     "node-sass": "4.9.0",
     "nps": "5.9.0",
