--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "chokidar-cli": "1.2.0",
     "commitizen": "2.10.1",
     "copy-webpack-plugin": "4.5.1",
-    "css-loader": "0.28.11",
+    "css-loader": "1.0.0",
     "cz-emoji": "1.1.1",
     "dotenv-webpack": "1.5.7",
     "enzyme": "3.3.0",
@@ -58,6 +58,7 @@
     "tslint": "5.10.0",
     "tslint-react": "3.6.0",
     "typescript": "2.9.1",
+    "typings-for-css-modules-loader": "1.7.0",
     "webpack": "4.12.0",
     "webpack-cli": "3.0.7",
     "webpack-dev-server": "3.1.4",
