:hammer: improvements from tgrstack/examples-games@f6e4790

--- a/package.json
+++ b/package.json
@@ -1,39 +1,48 @@
 {
-  "name": "2018-ts-module",
+  "name": "tgr-react-app",
   "version": "1.0.0",
   "description": "TGRStack TS-React-Module w/ Declarations, WebPack, and Opinions.",
   "main": "build/index.html",
   "typings": "./build/index",
   "dependencies": {
+    "@tgrx/gx": "1.0.0-rc4",
     "apollo-cache-inmemory": "1.2.4",
     "apollo-client": "2.3.4",
     "apollo-link": "1.2.2",
     "apollo-link-error": "1.1.0",
     "apollo-link-http": "1.5.4",
     "apollo-link-state": "0.4.1",
+    "classnames": "2.2.6",
     "graphql": "0.13.2",
     "graphql-tag": "2.9.2",
-    "gx": "1.0.0-rc4",
+    "lodash.clonedeep": "4.5.0",
+    "lodash.isequal": "4.5.0",
     "react": "16.4.1",
     "react-apollo": "2.1.5",
     "react-dom": "16.4.1",
     "react-helmet": "5.2.0",
-    "react-router-dom": "4.3.1"
+    "react-router-dom": "4.3.1",
+    "url-search-params": "1.0.2"
   },
   "devDependencies": {
     "@babel/cli": "7.0.0-beta.51",
     "@babel/core": "7.0.0-beta.51",
     "@babel/preset-env": "7.0.0-beta.51",
     "@babel/preset-react": "7.0.0-beta.51",
+    "@tgrx/tslint-config-tgr": "5.0.0",
+    "@trust/webcrypto": "0.9.2",
+    "@types/classnames": "2.2.6",
     "@types/enzyme": "3.1.11",
     "@types/jest": "23.1.1",
+    "@types/lodash.clonedeep": "4.5.4",
+    "@types/lodash.isequal": "4.5.3",
     "@types/react": "16.3.17",
     "@types/react-dom": "16.0.6",
     "@types/react-helmet": "5.0.6",
-    "@types/react-router-dom": "4.2.7",
+    "@types/react-router-dom": "4.3.0",
     "babel-loader": "8.0.0-beta.3",
-    "chokidar": "2.0.3",
-    "chokidar-cli": "1.2.0",
+    "chokidar": "2.0.4",
+    "chokidar-cli": "1.2.1",
     "commitizen": "2.10.1",
     "copy-webpack-plugin": "4.5.1",
     "css-loader": "1.0.0",
@@ -45,7 +54,7 @@
     "html-webpack-plugin": "3.2.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.1.0",
-    "node-sass": "4.9.0",
+    "node-sass": "4.10.0",
     "nps": "5.9.0",
     "nps-utils": "1.5.0",
     "react-testing-library": "4.0.2",
@@ -55,20 +64,21 @@
     "ts-jest": "22.4.6",
     "ts-loader": "4.4.1",
     "ts-node": "6.0.5",
-    "tslint": "5.10.0",
-    "tslint-react": "3.6.0",
-    "typescript": "2.9.1",
+    "tsconfig-paths-webpack-plugin": "3.2.0",
+    "tslint": "5.11.0",
+    "typescript": "3.0.1",
     "typings-for-css-modules-loader": "1.7.0",
     "webpack": "4.12.0",
     "webpack-cli": "3.0.7",
-    "webpack-dev-server": "3.1.4",
+    "webpack-dev-server": "3.1.10",
     "webpack-merge": "4.1.3",
     "webpack-node-externals": "1.7.2",
     "write-file-webpack-plugin": "4.3.2"
   },
   "scripts": {
     "start": "nps",
-    "test": "nps test"
+    "test": "nps test",
+    "help": "nps help"
   },
   "config": {
     "cz-emoji": {
