--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "nps": "5.9.3",
     "nps-utils": "1.7.0",
     "react-testing-library": "4.0.2",
+    "replace": "1.0.0",
     "sass-loader": "7.0.3",
     "standard-version": "4.4.0",
     "style-loader": "0.21.0",
