--- a/package.json
+++ b/package.json
@@ -6,47 +6,47 @@
   "typings": "./build/index",
   "dependencies": {
     "@tgrx/gx": "1.0.0-rc4",
-    "apollo-cache-inmemory": "1.2.4",
-    "apollo-client": "2.3.4",
-    "apollo-link": "1.2.2",
-    "apollo-link-error": "1.1.0",
-    "apollo-link-http": "1.5.4",
-    "apollo-link-state": "0.4.1",
+    "apollo-cache-inmemory": "1.2.10",
+    "apollo-client": "2.3.8",
+    "apollo-link": "1.2.4",
+    "apollo-link-error": "1.1.2",
+    "apollo-link-http": "1.5.7",
+    "apollo-link-state": "0.4.2",
     "classnames": "2.2.6",
     "graphql": "0.13.2",
     "graphql-tag": "2.9.2",
     "lodash.clonedeep": "4.5.0",
     "lodash.isequal": "4.5.0",
-    "react": "16.4.1",
-    "react-apollo": "2.1.5",
-    "react-dom": "16.4.1",
+    "react": "16.4.2",
+    "react-apollo": "2.1.11",
+    "react-dom": "16.4.2",
     "react-helmet": "5.2.0",
     "react-router-dom": "4.3.1",
     "url-search-params": "1.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0-beta.51",
-    "@babel/core": "7.0.0-beta.51",
-    "@babel/preset-env": "7.0.0-beta.51",
-    "@babel/preset-react": "7.0.0-beta.51",
+    "@babel/cli": "7.0.0",
+    "@babel/core": "7.0.1",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-react": "7.0.0",
     "@tgrx/tslint-config-tgr": "5.0.0",
     "@trust/webcrypto": "0.9.2",
     "@types/classnames": "2.2.6",
-    "@types/enzyme": "3.1.11",
-    "@types/jest": "23.1.1",
+    "@types/enzyme": "3.1.15",
+    "@types/jest": "23.1.6",
     "@types/lodash.clonedeep": "4.5.4",
     "@types/lodash.isequal": "4.5.3",
-    "@types/react": "16.3.17",
-    "@types/react-dom": "16.0.6",
-    "@types/react-helmet": "5.0.6",
-    "@types/react-router-dom": "4.3.0",
-    "babel-loader": "8.0.0-beta.3",
+    "@types/react": "16.3.18",
+    "@types/react-dom": "16.0.11",
+    "@types/react-helmet": "5.0.7",
+    "@types/react-router-dom": "4.3.1",
+    "babel-loader": "8.0.4",
     "chokidar": "2.0.4",
     "chokidar-cli": "1.2.1",
     "commitizen": "2.10.1",
-    "copy-webpack-plugin": "4.5.1",
-    "css-loader": "1.0.0",
-    "cz-emoji": "1.1.1",
+    "copy-webpack-plugin": "4.5.4",
+    "css-loader": "1.0.1",
+    "cz-emoji": "1.1.2",
     "dotenv-webpack": "1.5.7",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
@@ -63,16 +63,16 @@
     "standard-version": "4.4.0",
     "style-loader": "0.21.0",
     "ts-jest": "22.4.6",
-    "ts-loader": "4.4.1",
+    "ts-loader": "4.4.2",
     "ts-node": "6.0.5",
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "tslint": "5.11.0",
-    "typescript": "3.0.1",
+    "typescript": "3.0.3",
     "typings-for-css-modules-loader": "1.7.0",
-    "webpack": "4.12.0",
-    "webpack-cli": "3.0.7",
+    "webpack": "4.12.2",
+    "webpack-cli": "3.0.8",
     "webpack-dev-server": "3.1.10",
-    "webpack-merge": "4.1.3",
+    "webpack-merge": "4.1.4",
     "webpack-node-externals": "1.7.2",
     "write-file-webpack-plugin": "4.3.2"
   },
