--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "typings": "./build/index",
   "dependencies": {
     "@tgrx/gx": "1.0.0-rc4",
+    "@tgrx/apollo-link-state": "0.4.3",
     "apollo-cache-inmemory": "1.2.10",
     "apollo-client": "2.3.8",
     "apollo-link": "1.2.4",
     "apollo-link-error": "1.1.2",
     "apollo-link-http": "1.5.7",
-    "apollo-link-state": "0.4.2",
     "classnames": "2.2.6",
-    "graphql": "0.13.2",
+    "graphql": "14.0.2",
     "graphql-tag": "2.9.2",
     "lodash.clonedeep": "4.5.0",
     "lodash.isequal": "4.5.0",
