--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-apollo": "2.1.11",
     "react-dom": "16.4.2",
     "react-helmet": "5.2.0",
-    "react-router-dom": "4.3.1",
-    "url-search-params": "1.0.2"
+    "react-router-dom": "4.3.1"
   },
   "devDependencies": {
     "@babel/cli": "7.0.0",
