:arrow_up: ($user) React 16.7-alpha (EXPERIMENTAL)

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "build/index.html",
   "typings": "./build/index",
   "dependencies": {
-    "@tgrx/gx": "1.0.0-rc4",
     "@tgrx/apollo-link-state": "0.4.3",
+    "@tgrx/gx": "1.0.0-rc4",
     "apollo-cache-inmemory": "1.2.10",
     "apollo-client": "2.3.8",
     "apollo-link": "1.2.4",
@@ -17,9 +17,9 @@
     "graphql-tag": "2.9.2",
     "lodash.clonedeep": "4.5.0",
     "lodash.isequal": "4.5.0",
-    "react": "16.4.2",
+    "react": "16.7.0-alpha.2",
     "react-apollo": "2.1.11",
-    "react-dom": "16.4.2",
+    "react-dom": "16.7.0-alpha.2",
     "react-helmet": "5.2.0",
     "react-router-dom": "4.3.1"
   },
@@ -35,7 +35,7 @@
     "@types/jest": "23.1.6",
     "@types/lodash.clonedeep": "4.5.4",
     "@types/lodash.isequal": "4.5.3",
-    "@types/react": "16.3.18",
+    "@types/react": "16.7.13",
     "@types/react-dom": "16.0.11",
     "@types/react-helmet": "5.0.7",
     "@types/react-router-dom": "4.3.1",
@@ -71,7 +71,7 @@
     "webpack": "4.12.2",
     "webpack-cli": "3.0.8",
     "webpack-dev-server": "3.1.10",
-    "webpack-merge": "4.1.4",
+    "webpack-merge": "4.1.5",
     "webpack-node-externals": "1.7.2",
     "write-file-webpack-plugin": "4.3.2"
   },
